manifest/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: fastapi-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fastapi-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fastapi-app
    spec:
      serviceAccountName: app-sa
      containers:
        - image: <AccountID>.dkr.ecr.ap-northeast-1.amazonaws.com/fastapi-app:latest
          imagePullPolicy: Always
          name: fastapi-app
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.5"
