manifest/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: app-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: fastapi-app
